Bug 67639 - EDITING: rotating a picture after cropping it produces an error
Summary: EDITING: rotating a picture after cropping it produces an error
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.1.0.4 release
Hardware: x86-64 (AMD64) Linux (All)
: medium major
Assignee: Tomaz Vajngerl
URL:
Whiteboard: target:4.2.0 target:4.1.1
Keywords:
Depends on:
Blocks:
 
Reported: 2013-08-01 19:29 UTC by bordfeldt
Modified: 2013-08-07 19:06 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments
picture before editing it (127.57 KB, image/jpg)
2013-08-01 19:29 UTC, bordfeldt
Details
picture after cropping (125.02 KB, image/jpeg)
2013-08-01 19:30 UTC, bordfeldt
Details
picture after cropping and rotating (124.91 KB, image/jpeg)
2013-08-01 19:31 UTC, bordfeldt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description bordfeldt 2013-08-01 19:29:17 UTC
Created attachment 83473 [details]
picture before editing it

LibreOffice 4.1.04 on Ubuntu 12.04 64bit

I inserted a gif-picture into a writer-document, then I cropped it and then I rotated it 90 degrees to right or left. After rotating the picture is displayed incorrectly.
Comment 1 bordfeldt 2013-08-01 19:30:37 UTC
Created attachment 83474 [details]
picture after cropping
Comment 2 bordfeldt 2013-08-01 19:31:25 UTC
Created attachment 83475 [details]
picture after cropping and rotating
Comment 3 Tomaz Vajngerl 2013-08-01 20:44:56 UTC
OK, the picture crop information also needs to be rotated.

Regards, Tomaž
Comment 4 Commit Notification 2013-08-01 21:30:48 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9121f09f3aeb75f3091c6b59cc3c3fade54cb607

fdo#67639 Rotate crop area when the image is rotated.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 bordfeldt 2013-08-04 17:26:15 UTC
Hi Tomas,

I just tested the behaviour with the daily build for linux from 13-08-02-19.37.54.
There is nothing changed. The problem stays the same.

Thank you

Thomas
Comment 6 Tomaz Vajngerl 2013-08-05 07:39:48 UTC
(In reply to comment #5)
> Hi Tomas,
> 
> I just tested the behaviour with the daily build for linux from
> 13-08-02-19.37.54.
> There is nothing changed. The problem stays the same.
> 
> Thank you
> 
> Thomas

Interesting. Works for me with the latest Windows daily build (2013-08-04_21:41:24) from master (the change was not accepted yet for 4.1). I used the GIF image from [1] to reproduce your scenario. Maybe try it with a newer daily build.

Can you please attach the document here so I can look at it, if this really was the problem.

Regards, Tomaž

[1]: http://www.unovaria.de/images/logos/Rummelsberg_200.gif
Comment 7 Commit Notification 2013-08-06 07:49:06 UTC
Tomaž Vajngerl committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=5f2010ed8436e6da90a996efbf070f34e485efd6&h=libreoffice-4-1

fdo#67639 Rotate crop area when the image is rotated.


It will be available in LibreOffice 4.1.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 8 bordfeldt 2013-08-07 18:19:06 UTC
Hi Tomaž,

today I tested it with the current daily build for linux:

Version: 4.1.2.0.0+
Build ID: 57de36c208a2a745bd40fad452d7a62871829d7
TinderBox: Linux-x86@34-Release-Configuration-RHEL5-Baseline, Branch:libreoffice-4-1, Time: 2013-08-06_17:34:21

Now it works. I cropped the picture (http://www.unovaria.de/images/logos/Rummelsberg_200.gif), rotated it several times, cropped the rotated picture again, rotated it again. Without problems!

Thank you for your help!

Regards, Thomas
Comment 9 Tomaz Vajngerl 2013-08-07 19:06:26 UTC
Great that it works now! The fix will be included in LO 4.1.1 when it is released.