fdo#67639 Rotate crop area when the image is rotated.

Change-Id: Ifdd0080f278b67b815f15c71523497de59e615bd